--- a/app/src/main/res/layout/list_item_person_long.xml
+++ b/app/src/main/res/layout/list_item_person_long.xml
@@ -14,7 +14,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/lynch_100"
+        android:background="@color/mirage_100"
         android:padding="10dp">
 
         <include
