--- a/app/src/main/res/layout/layout_collection_dialog.xml
+++ b/app/src/main/res/layout/layout_collection_dialog.xml
@@ -13,7 +13,7 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardElevation="0dp"
+        app:cardElevation="4dp"
         android:backgroundTint="@android:color/transparent"
         app:cardBackgroundColor="@android:color/transparent"
         app:cardCornerRadius="20dp">
@@ -25,7 +25,6 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
-                android:layout_centerInParent="true"
                 tools:src="@tools:sample/backgrounds/scenic"
                 android:scaleType="centerCrop"
                 app:imageUrl="@{collection.backdrop_path}" />
@@ -34,10 +33,8 @@
                 android:id="@+id/collection_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginBottom="10dp"
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginVertical="10dp"
                 android:background="@drawable/round_corner_transparent_bg"
                 android:padding="10dp"
                 android:text="@{collection.name}"
@@ -53,10 +50,6 @@
                 android:layout_below="@id/collection_title"
                 android:orientation="horizontal"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
                 tools:listitem="@layout/list_item_movie_small" />
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
