--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -47,8 +47,8 @@
     <dialog
         android:id="@+id/bottomSheetFragment"
         android:name="com.example.cinemates.view.ui.details.movie.ManageBottomSheetFragment"
-        tools:layout="@layout/fragment_manage_bottomsheet"
-        android:label="BottomSheetFragment"/>
+        android:label="BottomSheetFragment"
+        tools:layout="@layout/fragment_manage_bottomsheet" />
     <fragment
         android:id="@+id/movieDetailsFragment"
         android:name="com.example.cinemates.view.ui.details.movie.MovieDetailsFragment"
@@ -64,11 +64,6 @@
             android:id="@+id/action_movieDetailsFragment_to_bottomSheetFragment"
             app:destination="@id/bottomSheetFragment" />
     </fragment>
-    <action
-        android:id="@+id/action_global_movieDetailsFragment"
-        app:destination="@id/movieDetailsFragment"
-        app:popUpTo="@id/movieDetailsFragment"
-        app:popUpToInclusive="true" />
     <fragment
         android:id="@+id/actorDetailsFragment"
         android:name="com.example.cinemates.view.ui.details.actor.ActorDetailsFragment"
@@ -79,14 +74,19 @@
             app:argType="com.example.cinemates.model.data.Person" />
     </fragment>
     <action
+        android:id="@+id/action_global_movieDetailsFragment"
+        app:destination="@id/movieDetailsFragment"
+        app:popUpTo="@id/movieDetailsFragment"
+        app:popUpToInclusive="true" />
+    <action
         android:id="@+id/action_global_actorDetailsFragment"
-        app:launchSingleTop="true"
-        app:popUpToInclusive="true"
-        app:destination="@id/actorDetailsFragment" />
+        app:destination="@id/actorDetailsFragment"
+        app:popUpTo="@id/actorDetailsFragment"
+        app:popUpToInclusive="true" />
     <dialog
         android:id="@+id/collectionDialogFragment"
-        tools:layout="@layout/layout_collection_dialog"
         android:name="com.example.cinemates.view.ui.details.movie.CollectionDialogFragment"
-        android:label="CollectionDialogFragment" />
+        android:label="CollectionDialogFragment"
+        tools:layout="@layout/layout_collection_dialog" />
 
 </navigation>
