--- a/app/src/main/res/layout/layout_collection_cover.xml
+++ b/app/src/main/res/layout/layout_collection_cover.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -11,11 +12,9 @@
         <import type="android.view.View" />
     </data>
 
-    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:elevation="4dp"
-        android:visibility="@{collection != null ? View.VISIBLE: View.GONE}"
+        android:layout_height="300dp"
         app:cardCornerRadius="20dp">
 
         <RelativeLayout
@@ -30,7 +29,7 @@
                 tools:src="@tools:sample/backgrounds/scenic" />
 
             <TextView
-                android:id="@+id/collectionName"
+                android:id="@+id/cover_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
