--- a/app/src/main/res/layout/layout_collection_content.xml
+++ b/app/src/main/res/layout/layout_collection_content.xml
@@ -56,7 +56,7 @@
                     android:id="@+id/movies_into_collection"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/collection_title"
+                    android:layout_below="@id/content_title"
                     android:orientation="horizontal"
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     tools:listitem="@layout/list_item_movie_small" />
