--- a/app/src/main/res/layout/layout_empty_recycler.xml
+++ b/app/src/main/res/layout/layout_empty_recycler.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center"
+    android:visibility="gone"
     android:layout_centerInParent="true"
     android:orientation="vertical">
 
