--- a/app/src/main/res/layout/list_item_review.xml
+++ b/app/src/main/res/layout/list_item_review.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="review"
-            type="com.example.cinemates.model.data.Review" />
+            type="com.example.cinemates.model.entities.Review" />
     </data>
 
     <androidx.cardview.widget.CardView
