--- a/app/src/main/res/layout/fragment_actor_details.xml
+++ b/app/src/main/res/layout/fragment_actor_details.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="person"
-            type="com.example.cinemates.model.data.Person" />
+            type="com.example.cinemates.model.entities.Person" />
     </data>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
