--- a/app/src/main/res/layout/fragment_movie_info.xml
+++ b/app/src/main/res/layout/fragment_movie_info.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="movie"
-            type="com.example.cinemates.model.data.Movie" />
+            type="com.example.cinemates.model.entities.Movie" />
 
         <import type="android.view.View" />
     </data>
