--- a/app/src/main/res/layout/layout_collection_content.xml
+++ b/app/src/main/res/layout/layout_collection_content.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="collection"
-            type="com.example.cinemates.model.data.Collection" />
+            type="com.example.cinemates.model.entities.Collection" />
 
         <import type="android.view.View" />
     </data>
