--- a/app/src/main/res/layout/layout_custom_dialog_random.xml
+++ b/app/src/main/res/layout/layout_custom_dialog_random.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="movie"
-            type="com.example.cinemates.model.data.Movie" />
+            type="com.example.cinemates.model.entities.Movie" />
     </data>
 
     <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
