--- a/app/src/main/res/layout/layout_poster_text_rating.xml
+++ b/app/src/main/res/layout/layout_poster_text_rating.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="movie"
-            type="com.example.cinemates.model.data.Movie" />
+            type="com.example.cinemates.model.entities.Movie" />
     </data>
 
     <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
