--- a/app/src/main/res/layout/list_item_movie_small.xml
+++ b/app/src/main/res/layout/list_item_movie_small.xml
@@ -5,7 +5,7 @@
 <data>
     <variable
         name="movie"
-        type="com.example.cinemates.model.data.Movie" />
+        type="com.example.cinemates.model.entities.Movie" />
 </data>
     <LinearLayout
         android:layout_width="wrap_content"
