--- a/app/src/main/res/layout/list_item_person_long.xml
+++ b/app/src/main/res/layout/list_item_person_long.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="actor"
-            type="com.example.cinemates.model.data.Cast" />
+            type="com.example.cinemates.model.entities.Cast" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
