--- a/app/src/main/res/layout/list_item_poster.xml
+++ b/app/src/main/res/layout/list_item_poster.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="image"
-            type="com.example.cinemates.network.response.ImagesResponse" />
+            type="com.example.cinemates.model.entities.Image" />
     </data>
 
     <androidx.cardview.widget.CardView
