--- a/app/src/main/res/layout/fragment_actor_details.xml
+++ b/app/src/main/res/layout/fragment_actor_details.xml
@@ -44,107 +44,72 @@
                         app:path="@{person.profile_path}" />
 
                     <androidx.appcompat.widget.LinearLayoutCompat
-                        android:id="@+id/birthday"
+                        android:id="@+id/actor_info"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="10dp"
+                        android:layout_marginHorizontal="10dp"
                         android:layout_marginTop="?attr/actionBarSize"
                         android:layout_toEndOf="@id/ivAvatar"
-                        android:orientation="horizontal"
-                        android:weightSum="100">
+                        android:orientation="vertical">
 
-                        <TextView
+                        <com.example.cinemates.util.LinearInfoView
+                            android:id="@+id/birthday"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_weight="50"
-                            android:text="Birthday"
-                            android:textColor="@color/geyser"
-                            android:textSize="14sp"
-                            android:textStyle="bold" />
+                            app:title="Birthday"
+                            app:value="@{person.birthday}" />
 
-                        <TextView
+                        <com.example.cinemates.util.LinearInfoView
+                            android:id="@+id/birthPlace"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_weight="50"
-                            android:textColor="@color/alabaster"
-                            android:textSize="14sp"
-                            app:loadText="@{person.birthday}"
-                            tools:text="@tools:sample/date/ddmmyy" />
-                    </androidx.appcompat.widget.LinearLayoutCompat>
+                            app:title="Birthplace"
+                            app:value="@{person.place_of_birth}" />
 
-                    <androidx.appcompat.widget.LinearLayoutCompat
-                        android:id="@+id/birthPlace"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@id/birthday"
-                        android:layout_marginStart="10dp"
-                        android:layout_marginTop="10dp"
-                        android:layout_toEndOf="@id/ivAvatar"
-                        android:orientation="horizontal"
-                        android:weightSum="100">
-
-                        <TextView
+                        <com.example.cinemates.util.LinearInfoView
+                            android:id="@+id/deathDate"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_weight="50"
-                            android:text="BirthPlace"
-                            android:textColor="@color/geyser"
-                            android:textSize="14sp"
-                            android:textStyle="bold" />
+                            app:title="Death-day"
+                            app:value="@{person.deathDay}" />
 
-                        <TextView
+                        <androidx.appcompat.widget.LinearLayoutCompat
+                            android:id="@+id/knownAs"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_weight="50"
-                            android:textColor="@color/alabaster"
-                            android:textIsSelectable="true"
-                            android:textSize="14sp"
-                            app:loadText="@{person.place_of_birth}"
-                            tools:text="@tools:sample/lorem" />
-                    </androidx.appcompat.widget.LinearLayoutCompat>
+                            android:minHeight="50dp"
+                            android:orientation="horizontal">
 
-                    <androidx.appcompat.widget.LinearLayoutCompat
-                        android:id="@+id/knownAs"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@id/birthPlace"
-                        android:layout_marginStart="10dp"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginEnd="10dp"
-                        android:layout_toEndOf="@id/ivAvatar"
-                        android:minHeight="50dp"
-                        android:orientation="horizontal"
-                        android:weightSum="100">
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:text="Known As"
+                                android:textColor="@color/geyser"
+                                android:textSize="14sp"
+                                android:textStyle="bold" />
 
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="50"
-                            android:text="Known As"
-                            android:textColor="@color/geyser"
-                            android:textSize="14sp"
-                            android:textStyle="bold" />
-
-                        <com.borjabravo.readmoretextview.ReadMoreTextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="50"
-                            android:textAlignment="textStart"
-                            android:textColor="@color/alabaster"
-                            android:textIsSelectable="true"
-                            android:textSize="14sp"
-                            app:colorClickableText="@color/vermilion_100"
-                            app:knowAs="@{person.also_known_as}"
-                            app:trimLength="50"
-                            app:trimMode="trimModeLength"
-                            tools:text="@tools:sample/lorem/random" />
+                            <com.borjabravo.readmoretextview.ReadMoreTextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:textAlignment="textStart"
+                                android:textColor="@color/alabaster"
+                                android:textIsSelectable="true"
+                                android:textSize="14sp"
+                                app:colorClickableText="@color/vermilion_100"
+                                app:knowAs="@{person.also_known_as}"
+                                app:trimLength="50"
+                                app:trimMode="trimModeLength"
+                                tools:text="@tools:sample/lorem/random" />
+                        </androidx.appcompat.widget.LinearLayoutCompat>
                     </androidx.appcompat.widget.LinearLayoutCompat>
 
                     <TextView
                         android:id="@+id/biographyTitle"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_below="@id/knownAs"
+                        android:layout_below="@id/actor_info"
                         android:layout_marginStart="10dp"
                         android:layout_marginTop="10dp"
                         android:text="Biography"
@@ -194,8 +159,8 @@
             android:layout_gravity="bottom|end"
             android:layout_margin="20dp"
             android:backgroundTint="@color/vermilion_100"
-            android:src="@drawable/ic_favorite_border"
-            android:contentDescription="Add to favorite" />
+            android:contentDescription="Add to favorite"
+            android:src="@drawable/ic_favorite_border" />
 
         <com.example.cinemates.util.RecyclerViewEmptySupport
             android:id="@+id/recyclerView"
