--- a/app/src/main/res/layout/fragment_actor_details.xml
+++ b/app/src/main/res/layout/fragment_actor_details.xml
@@ -89,7 +89,7 @@
                                 android:textSize="14sp"
                                 android:textStyle="bold" />
 
-                            <com.borjabravo.readmoretextview.ReadMoreTextView
+                            <com.example.cinemates.util.ReadMoreTextView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
@@ -117,7 +117,7 @@
                         android:textSize="14sp"
                         android:textStyle="bold" />
 
-                    <com.borjabravo.readmoretextview.ReadMoreTextView
+                    <com.example.cinemates.util.ReadMoreTextView
                         android:id="@+id/readMoreTextV"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
