--- a/app/src/main/res/layout/layout_linear_info.xml
+++ b/app/src/main/res/layout/layout_linear_info.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_marginBottom="10dp"
-    android:layout_height="match_parent"
-    android:orientation="horizontal">
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="10dp">
 
     <TextView
         android:id="@+id/title"
@@ -16,12 +16,15 @@
         android:textStyle="bold"
         tools:text="@tools:sample/first_names" />
 
-    <TextView
+    <com.example.cinemates.util.ReadMoreTextView
         android:id="@+id/value"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:textColor="@color/alabaster"
+        android:layout_weight="1"
         android:textSize="14sp"
+        app:colorClickableText="@color/vermilion_100"
+        app:trimLength="50"
+        app:trimMode="trimModeLength"
         tools:text="@tools:sample/first_names" />
 </androidx.appcompat.widget.LinearLayoutCompat>
