--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -3,6 +3,7 @@
     <declare-styleable name="LinearInfoView">
         <attr name="title" format="string"/>
         <attr name="value" format="string"/>
+        <attr name="android:orientation"/>
     </declare-styleable>
 
     <declare-styleable name="ReadMoreTextView">
