--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -3,7 +3,7 @@
     <declare-styleable name="LinearInfoView">
         <attr name="title" format="string"/>
         <attr name="value" format="string"/>
-        <attr name="android:orientation"/>
+        <attr name="hideIfValueEmpty" format="boolean"/>
     </declare-styleable>
 
     <declare-styleable name="ReadMoreTextView">
