Fix custom orientation in LinearInfoView.kt

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <declare-styleable name="LinearInfoView">
-        <attr name="title" format="string"/>
-        <attr name="value" format="string"/>
-        <attr name="hideIfValueEmpty" format="boolean"/>
+        <attr name="title" format="string" />
+        <attr name="value" format="string" />
+        <attr name="hideIfValueEmpty" format="boolean" />
+        <attr name="android:orientation"/>
     </declare-styleable>
 
     <declare-styleable name="ReadMoreTextView">
@@ -14,8 +15,8 @@
         <attr name="colorClickableText" format="color" />
         <attr name="trimLines" format="integer" />
         <attr name="trimMode">
-            <enum name="trimModeLine" value="0"/>
-            <enum name="trimModeLength" value="1"/>
+            <enum name="trimModeLine" value="0" />
+            <enum name="trimModeLength" value="1" />
         </attr>
     </declare-styleable>
 </resources>
