--- a/app/src/main/res/layout/fragment_movie_info.xml
+++ b/app/src/main/res/layout/fragment_movie_info.xml
@@ -26,7 +26,7 @@
                 tools:context=".view.ui.details.movie.MovieInfoFragment">
 
 
-                <com.borjabravo.readmoretextview.ReadMoreTextView
+                <com.example.cinemates.util.ReadMoreTextView
                     android:id="@+id/readMoreTextV"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -35,10 +35,6 @@
                     android:layout_marginEnd="10dp"
                     android:textColor="@color/alabaster"
                     android:textSize="14sp"
-                    app:colorClickableText="@color/vermilion_100"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
                     app:loadText="@{movie.overview}"
                     app:trimLength="200"
                     app:trimMode="trimModeLength"
@@ -53,7 +49,7 @@
                     android:layout_marginTop="20dp"
                     android:text="Genres"
                     android:textColor="@color/white"
-                    android:textSize="18sp"
+                    android:textSize="24sp"
                     android:textStyle="bold" />
 
                 <HorizontalScrollView
@@ -72,24 +68,6 @@
                         app:singleSelection="true" />
                 </HorizontalScrollView>
 
-                <!--     <TextView
-                         android:id="@+id/textTitleCrew"
-                         android:layout_width="match_parent"
-                         android:layout_height="wrap_content"
-                         android:layout_marginTop="20dp"
-                         android:text="Crew"
-                         android:layout_marginStart="20dp"
-                         android:textColor="@color/alabaster"
-                         android:textSize="18sp"
-                         android:textStyle="bold"
-                         android:layout_below="@id/chip_group"/>
-
-                     <GridView
-                         android:id="@+id/listCrew"
-                         android:layout_width="match_parent"
-                         android:layout_height="wrap_content"
-                         android:layout_below="@id/textTitleCrew"/>-->
-
                 <TextView
                     android:id="@+id/textTitleInfo"
                     android:layout_width="match_parent"
@@ -99,7 +77,7 @@
                     android:layout_marginTop="10dp"
                     android:text="Info"
                     android:textColor="@color/alabaster"
-                    android:textSize="18sp"
+                    android:textSize="24sp"
                     android:textStyle="bold" />
 
                 <include
@@ -108,6 +86,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="10dp"
+                    android:layout_marginTop="10dp"
                     android:layout_below="@id/textTitleInfo"
                     app:movie="@{movie}" />
 
@@ -118,7 +97,7 @@
                     android:layout_height="300dp"
                     android:layout_below="@id/movie_info"
                     android:layout_marginHorizontal="20dp"
-                    android:layout_marginTop="0dp"
+                    android:layout_marginTop="10dp"
                     app:collection="@{movie.belongs_to_collection}" />
 
                 <androidx.appcompat.widget.LinearLayoutCompat
@@ -134,7 +113,7 @@
                         android:layout_marginStart="10dp"
                         android:text="Similar"
                         android:textColor="@color/white"
-                        android:textSize="18sp"
+                        android:textSize="24sp"
                         android:textStyle="bold" />
 
                     <RelativeLayout
@@ -161,7 +140,7 @@
                         android:layout_marginStart="10dp"
                         android:text="Videos"
                         android:textColor="@color/white"
-                        android:textSize="18sp"
+                        android:textSize="24sp"
                         android:textStyle="bold" />
 
 
