--- a/app/src/main/res/layout/layout_linear_info.xml
+++ b/app/src/main/res/layout/layout_linear_info.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginBottom="10dp">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/title"
@@ -27,4 +26,4 @@
         app:trimLength="50"
         app:trimMode="trimModeLength"
         tools:text="@tools:sample/first_names" />
-</androidx.appcompat.widget.LinearLayoutCompat>
+</merge>
